--- a/css/happy-style.css
+++ b/css/happy-style.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Annapurna+SIL:wght@400;700&family=MonteCarlo&family=WindSong&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Days+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titan+One&display=swap");
 
 :root {
   --primary-blue: #3a558c;
   --yellow: #f2a71b;
-  --secondary-orange:  #f28f16;
-  --peach:  #f2c48d;
-  --brick:  #8c391b;
+  --secondary-orange: #f28f16;
+  --peach: #f2c48d;
+  --peach-lighter: #fef4da;
+  --brick: #8c391b;
+  --brick-dark: #360600;
 
-  --primary-font: "MonteCarlo", cursive;
-  --secondary-font: "Annapurna SIL", serif;
+  --primary-font: "Titan One", sans-serif;
+  --secondary-font: "Poppins", sans-serif;
 }
-  
 
 * {
   box-sizing: border-box;
@@ -44,22 +45,24 @@ ul li {
   margin-left: 1rem;
   padding: 10px 30px;
   font-size: 16px;
-  background-color: var(--secondary-green);
-  border: 2px solid var(--secondary-green);
-  color: var(--dark-beige);
+  background-color: transparent;
+  border: 2px solid var(--brick);
+  color: var(--brick);
   font-weight: 700;
   text-align: center;
   border-radius: 25px;
-  transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease, box-shadow 0.2s ease, transform 0.2s ease; 
+  transition: background-color 0.3s ease, border-color 0.3s ease,
+    color 0.3s ease, box-shadow 0.2s ease, transform 0.2s ease;
   cursor: pointer;
-  box-shadow: 0 0 0 4px var(--secondary-green),
-  0 0 0 6px var(--secondary-green);
+  box-shadow: 0 0 0 4px var(--secondary-green), 0 0 0 6px var(--secondary-green);
+  transition: 0.3s;
 }
 
 .secondary-button:hover {
-    box-shadow: 0 0 0 4px var(--light-beige), 
-                0 0 0 6px var(--secondary-green);
-                color: var(--light-beige);
+  box-shadow: 0 0 0 4px var(--light-beige), 0 0 0 6px var(--secondary-green);
+  color: var(--peach-lighter);
+  border: 2px solid var(--brick);
+  background-color: var(--brick);
 }
 
 .secondary-button:active {
@@ -67,30 +70,32 @@ ul li {
 }
 
 .primary-button {
-    display: inline-block;
-    padding: 10px 30px;
-    font-size: 16px;
-    font-weight: 700;
-    border: 2px solid var(--primary-rose); 
-    background-color: var(--primary-rose);
-    color: var(--secondary-green); 
-    text-align: center;
-    cursor: pointer;
-    transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease, box-shadow 0.2s ease, transform 0.2s ease; 
-  color: var(--light-beige);
-    border-radius: 20px;
-    box-shadow: 0 0 0 4px var(--light-beige), 
-                0 0 0 6px var(--primary-rose);
+  display: inline-block;
+  padding: 10px 30px;
+  font-size: 16px;
+  font-weight: 700;
+  border: 2px solid var(--yellow);
+  background-color: var(--yellow);
+  color: var(--brick-dark);
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease, border-color 0.3s ease,
+    color 0.3s ease, box-shadow 0.2s ease, transform 0.2s ease;
+  border-radius: 20px;
+  box-shadow: 0 0 0 4px var(--light-beige), 0 0 0 6px var(--primary-rose);
+  filter: brightness(1);
+  transition: 0.3s;
 }
 
 .primary-button:hover {
-    box-shadow: 0 0 0 4px var(--primary-rose), 
-                0 0 0 6px var(--primary-rose); 
-                color: var(--dark-beige);
+  box-shadow: 0 0 0 4px var(--primary-rose), 0 0 0 6px var(--primary-rose);
+  filter: brightness(1.4);
+  background-color: var(--yellow);
+  border: 2px solid var(--yellow);
 }
 
 .primary-button:active {
-    transform: scale(0.95);
+  transform: scale(0.95);
 }
 
 header a {
@@ -149,15 +154,15 @@ ul li:last-child {
 }
 
 .color-swatch-3 {
-  background-color: var(--secondary-orange);
+  background-color: var(--brick-dark);
+}
+
+.color-swatch-4 {
+  background-color: var(--brick);
 }
 
 .color-swatch-5 {
   background-color: var(--peach);
-}
-
-.color-swatch-4 {
-    background-color: var(--brick);
 }
 
 .textures li {
@@ -189,12 +194,14 @@ ul li:last-child {
   font-size: 3.6rem;
   font-weight: bold;
   font-family: var(--primary-font);
+  color: var(--brick);
 }
 
 .h2-sample {
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 1.8rem;
+  color: var(--brick-dark);
 }
 
 p.typography-sample {
@@ -202,6 +209,7 @@ p.typography-sample {
   font-weight: 500;
   line-height: 1.5;
   max-width: 960px;
+  color: var(--brick-dark);
 }
 
 strong {
@@ -217,20 +225,21 @@ em {
   color: var(--dark-beige);
   font-weight: 700;
   text-decoration: underline;
+  color: var(--brick);
+  transition: 0.3s ease;
 }
 
 .column a:hover {
-  color: black;
+  color: var(--brick-dark);
 }
 
 p[class*="font-details-"] {
-  margin-top: 0.5rem;
-  margin-bottom: calc(2 * var(--white-space));
+  margin-top: 0.1rem;
+  margin-bottom: 0.75rem;
   font-size: 0.75rem;
   font-family: var(--secondary-font);
   color: #6f6f6f;
 }
-
 
 @media (min-width: 800px) {
   main {
@@ -255,4 +264,3 @@ p[class*="font-details-"] {
     flex-direction: row;
   }
 }
-
